# colsol

./: Cargo.toml  README.md
src/: colsol.rs  lib.rs  main.rs
src/tests/: mod.rs  test_colsol.rs
