[package]
name = "colsol"
version = "0.1.3"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2018"
description = "Functions for direct solution of matrix equations for compact form matrices."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
