[package]
name = "colsol"
version = "1.0.0"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "Functions for direct solution of matrix equations for compact form matrices."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RomanShushakov/colsol"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
